More CV edits, fixed intro text problems when on mobile

--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -104,8 +104,8 @@ $layout: (
 
 $responsive: (
   sm:                      0,
-  md:                      500px,
-  lg:                      1024px
+  md:                      576px,
+  lg:                      996px
 );
 
 $animation: (
